--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -549,8 +549,15 @@ ol ul li {
   
 }
 
+.markdown li > p {
+  color: var(--text-primary);
+  font-weight: 600;
+  font-size: 15px;
+  font-family: var(--font-family-inter);
+}
+
 .listRomanUpper li {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   line-height: 0.5; 
   color:var(--text-secondary)
 }
