--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -81,13 +81,13 @@ html[data-theme="dark"] .logo-dark {
   color: var( --text-secondary);
   transition: color 0.2s;
   padding: 8px;
-  max-width: 89px;
+  min-width: 89px;
   height:32px
 }
 
 .dropdown-arrow {
   font-size: 10px;
-  margin-left: 5px;
+  margin-left: 8px;
   transition: transform 0.2s;
 }
 
