--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -1,7 +1,7 @@
 /* src/theme/Footer/styles.module.css */
 
 .footer {
-  background-color: #131313;
+  background-color: var(--static-black);
   padding: 0.75rem 0;
   color: rgba(255, 255, 255, 0.7);
 }
@@ -37,7 +37,7 @@
 .socialLink {
   display: flex;
   align-items: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--icon-secondary);
   text-decoration: none;
   transition: opacity 0.2s;
   gap: 0.5rem;
@@ -72,7 +72,7 @@
   }
   
   .socialLinks {
-    gap: 1.25rem;
+    gap: 24px;
   }
 }
 
@@ -82,6 +82,13 @@
     gap: 1rem;
     padding: 1rem;
   }
+  
+.socialIcon {
+  height: 19px;
+  width: 19px;
+ 
+}
+
   
   .copyright {
     margin-bottom: 0.5rem;
